Zmiana kolorow w CSS

--- a/sprawdzian_HTML_CSS_Radosław Galikowski/styl.css
+++ b/sprawdzian_HTML_CSS_Radosław Galikowski/styl.css
@@ -1,5 +1,5 @@
 body{
-    background-color: darkcyan;
+    background-color: darkgreen;
     font-family: Arial, sans-serif;
     font-size: 20px;
 }
@@ -24,3 +24,4 @@ p{
     color: orange;
     font-weight: bold;
  }
+
